# truth-unveiled

./: CMakeLists.txt
src/: Task1_5.cpp  Task2_5.cpp  Task3_5.cpp  Task4_5.cpp
